Data💽 Engineering list[dic] >>> Markdown✨ in prog

--- a/templates/pages/test.html
+++ b/templates/pages/test.html
@@ -66,6 +66,8 @@
                                 <p class="col-12 m-0 py-3">{{data.content}}</p>
                             {% elif data.tag == "h2" %}
                                 <h2 class="col-12 m-0 py-3">{{data.content}}</h2>
+                            {% elif data.tag == "h4" %}
+                                <h4 class="col-12 m-0 py-3">{{data.content}}</h4>
                             {% elif data.tag == "h5" %}
                                 <h5 class="col-12 m-0 py-1">{{data.content}}</h5>
                             {% elif data.tag == "span" %}
