--- a/templates/base.html
+++ b/templates/base.html
@@ -174,6 +174,30 @@
             }
          -->
         <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Inter:wght@100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=VT323&display=swap" rel="stylesheet">
+        <!-- 
+            Use for Code tags 👇👇👇
+
+            ource Code Pro: CSS class for a variable style:
+
+                // <uniquifier>: Use a unique and descriptive class name
+                // <weight>: Use a value from 200 to 900
+
+                .source-code-pro-<uniquifier> {
+                    font-family: "Source Code Pro", monospace;
+                    font-optical-sizing: auto;
+                    font-weight: <weight>;
+                    font-style: normal;
+                }
+
+            VT323: CSS class: 
+                
+                .vt323-regular {
+                    font-family: 'VT323', monospace;
+                    font-weight: 400;
+                    font-style: normal;
+                }
+         -->
 
         <!-- my styles -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
