✅ M⬇ data💽 FullStack Integration✨

--- a/templates/base.html
+++ b/templates/base.html
@@ -184,7 +184,7 @@
                 // <weight>: Use a value from 200 to 900
 
                 .source-code-pro-<uniquifier> {
-                    font-family: "Source Code Pro", monospace;
+                    font-family: 'Source Code Pro', monospace;
                     font-optical-sizing: auto;
                     font-weight: <weight>;
                     font-style: normal;
